--- a/kobuki_safety_controller/package.xml
+++ b/kobuki_safety_controller/package.xml
@@ -13,8 +13,8 @@
   <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
   <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
   <license>BSD</license>
-  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
-  <url type="repository">https://github.com/yujinrobot/kobuki</url>
+  <url type="bugtracker">https://github.com/kobuki-base/kobuki_ros/issues</url>
+  <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
   <url type="website">http://ros.org/wiki/kobuki_safety_controller</url>
 
   <buildtool_depend>catkin</buildtool_depend>
