--- a/kobuki_keyop/package.xml
+++ b/kobuki_keyop/package.xml
@@ -4,11 +4,11 @@
   <description>
     Keyboard teleoperation for Kobuki: relays commands from a keyboard to Kobuki.
   </description>
-  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
-  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
+  <author email="d.stonier@gmail.com">Daniel Stonier</author>
+  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
   <license>BSD</license>
-  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
-  <url type="repository">https://github.com/yujinrobot/kobuki</url>
+  <url type="bugtracker">https://github.com/kobuki-base/kobuki_ros/issues</url>
+  <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
   <url type="website">http://ros.org/wiki/kobuki_keyop</url>
 
   <buildtool_depend>catkin</buildtool_depend>
