--- a/kobuki_node/package.xml
+++ b/kobuki_node/package.xml
@@ -7,10 +7,10 @@
   <author>Daniel Stonier</author>
   <author>Younghun Ju</author>
   <author>Jorge Santos Simon</author>
-  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
+  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
   <license>BSD</license>
-  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
-  <url type="repository">https://github.com/yujinrobot/kobuki</url>
+  <url type="bugtracker">https://github.com/kobuki-base/kobuki_ros/issues</url>
+  <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
   <url type="website">http://ros.org/wiki/kobuki_node</url>
 
   <buildtool_depend>catkin</buildtool_depend>
