--- a/kobuki_ros/.project
+++ b/kobuki_ros/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>kobuki</name>
+	<name>kobuki_ros</name>
 	<comment></comment>
 	<projects>
 	</projects>
