--- a/kobuki_testsuite/package.xml
+++ b/kobuki_testsuite/package.xml
@@ -7,8 +7,8 @@
   <author email="jorge@yujinrobot.com">Jorge Santos Simon</author>
   <maintainer email="jorge@yujinrobot.com">Jorge Santos Simon</maintainer>
   <license>BSD</license>
-  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
-  <url type="repository">https://github.com/yujinrobot/kobuki</url>
+  <url type="bugtracker">https://github.com/kobuki-base/kobuki_ros/issues</url>
+  <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
   <url type="website">http://ros.org/wiki/kobuki_testsuite</url>
  
   <buildtool_depend>catkin</buildtool_depend>
