--- a/kobuki_safety_controller/CMakeLists.txt
+++ b/kobuki_safety_controller/CMakeLists.txt
@@ -1,29 +1,54 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 project(kobuki_safety_controller)
-find_package(catkin REQUIRED COMPONENTS roscpp nodelet pluginlib std_msgs geometry_msgs kobuki_msgs yocs_controllers ecl_threads)
 
-catkin_package(
-   INCLUDE_DIRS include
-   LIBRARIES kobuki_safety_controller_nodelet
-   CATKIN_DEPENDS roscpp nodelet pluginlib std_msgs geometry_msgs kobuki_msgs yocs_controllers ecl_threads
+find_package(ament_cmake_ros REQUIRED)
+find_package(ecl_build REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(kobuki_ros_interfaces REQUIRED)
+find_package(rcl_interfaces REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(std_msgs REQUIRED)
+
+ecl_enable_cxx14_compiler()
+ecl_enable_cxx_warnings()
+
+include_directories(include)
+
+add_library(kobuki_safety_controller SHARED src/safety_controller.cpp)
+ament_target_dependencies(kobuki_safety_controller
+  "geometry_msgs"
+  "rcl_interfaces"
+  "kobuki_ros_interfaces"
+  "rclcpp"
+  "rclcpp_components"
+  "std_msgs"
 )
 
-include_directories(include
-                    ${catkin_INCLUDE_DIRS})
+add_executable(kobuki_safety_controller_node src/safety_controller_node.cpp)
+ament_target_dependencies(kobuki_safety_controller_node
+  "rclcpp"
+)
+target_link_libraries(kobuki_safety_controller_node
+  kobuki_safety_controller
+)
 
-add_library(kobuki_safety_controller_nodelet src/nodelet.cpp)
-add_dependencies(kobuki_safety_controller_nodelet ${catkin_EXPORTED_TARGETS})
-target_link_libraries(kobuki_safety_controller_nodelet ${catkin_LIBRARIES})
+rclcpp_components_register_nodes(kobuki_safety_controller
+  "kobuki_safety_controller::SafetyController")
 
-install(TARGETS kobuki_safety_controller_nodelet
-        DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+install(TARGETS kobuki_safety_controller
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
 )
 install(DIRECTORY include/${PROJECT_NAME}/
-        DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  DESTINATION include/${PROJECT_NAME}
+  )
+install(TARGETS kobuki_safety_controller_node
+  DESTINATION lib/${PROJECT_NAME}
 )
-install(DIRECTORY plugins
-        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+install(DIRECTORY config launch
+  DESTINATION share/${PROJECT_NAME}
 )
-install(DIRECTORY launch
-        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
+
+ament_package()
