--- a/kobuki_safety_controller/package.xml
+++ b/kobuki_safety_controller/package.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>kobuki_safety_controller</name>
   <version>0.7.6</version>
@@ -15,7 +17,7 @@
   <license>BSD</license>
   <url type="bugtracker">https://github.com/kobuki-base/kobuki_ros/issues</url>
   <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
-  <url type="website">http://ros.org/wiki/kobuki_safety_controller</url>
+  <url type="website">https://index.ros.org/p/kobuki_safety_controller/github-kobuki-base-kobuki_ros</url>
 
   <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
