--- a/kobuki_safety_controller/package.xml
+++ b/kobuki_safety_controller/package.xml
@@ -1,4 +1,6 @@
-<package>
+<?xml version="1.0" encoding="utf-8"?>
+<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="2">
   <name>kobuki_safety_controller</name>
   <version>0.7.6</version>
   <description>
@@ -6,7 +8,7 @@
 
     The SafetyController keeps track of bumper, cliff and wheel drop events. In case of the first two,
     Kobuki is commanded to move back. In the latter case, Kobuki is stopped.
-    
+
     This controller can be enabled/disabled.
     The safety states (bumper pressed etc.) can be reset. WARNING: Dangerous!
   </description>
@@ -15,29 +17,26 @@
   <license>BSD</license>
   <url type="bugtracker">https://github.com/kobuki-base/kobuki_ros/issues</url>
   <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
-  <url type="website">http://ros.org/wiki/kobuki_safety_controller</url>
+  <url type="website">https://index.ros.org/p/kobuki_safety_controller/github-kobuki-base-kobuki_ros</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
-  <build_depend>roscpp</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>pluginlib</build_depend>
-  <build_depend>std_msgs</build_depend>
+  <build_depend>ecl_build</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>kobuki_msgs</build_depend>
-  <build_depend>yocs_controllers</build_depend>
-  <build_depend>ecl_threads</build_depend>
+  <build_depend>kobuki_ros_interfaces</build_depend>
+  <build_depend>rcl_interfaces</build_depend>
+  <build_depend>rclcpp</build_depend>
+  <build_depend>rclcpp_components</build_depend>
+  <build_depend>std_msgs</build_depend>
 
-  <run_depend>roscpp</run_depend>
-  <run_depend>nodelet</run_depend>
-  <run_depend>pluginlib</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>kobuki_msgs</run_depend>
-  <run_depend>yocs_controllers</run_depend>
-  <run_depend>ecl_threads</run_depend>
-  
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>kobuki_ros_interfaces</exec_depend>
+  <exec_depend>rcl_interfaces</exec_depend>
+  <exec_depend>rclcpp</exec_depend>
+  <exec_depend>rclcpp_components</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+
   <export>
-    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
