--- a/kobuki_node/package.xml
+++ b/kobuki_node/package.xml
@@ -1,8 +1,10 @@
-<package>
+<?xml version="1.0" encoding="utf-8"?>
+<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="2">
   <name>kobuki_node</name>
   <version>0.7.6</version>
   <description>
-      ROS nodelet for Kobuki: ROS wrapper for the Kobuki driver.
+      ROS node for Kobuki: ROS wrapper for the Kobuki driver.
   </description>
   <author>Daniel Stonier</author>
   <author>Younghun Ju</author>
@@ -11,73 +13,48 @@
   <license>BSD</license>
   <url type="bugtracker">https://github.com/kobuki-base/kobuki_ros/issues</url>
   <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
-  <url type="website">http://ros.org/wiki/kobuki_node</url>
+  <url type="website">https://index.ros.org/p/kobuki_node/github-kobuki-base-kobuki_ros</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
-
-  <!-- ROS -->
-  <build_depend>roscpp</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>angles</build_depend>
-  <build_depend>diagnostic_updater</build_depend>
-  <build_depend>diagnostic_msgs</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>pluginlib</build_depend>
-
-  <!-- Kobuki -->
-  <build_depend>kobuki_msgs</build_depend>
-  <build_depend>kobuki_driver</build_depend>
-  <build_depend>kobuki_ftdi</build_depend>
-  <build_depend>kobuki_keyop</build_depend>
-  <build_depend>kobuki_safety_controller</build_depend>
-
-  <!-- ECL -->
-  <build_depend>ecl_exceptions</build_depend>
-  <build_depend>ecl_sigslots</build_depend>
-  <build_depend>ecl_streams</build_depend>
-  <build_depend>ecl_threads</build_depend>
-
-  <!-- For Tests -->
-  <build_depend>rospy</build_depend>
-
+  <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
   <!-- ROS -->
-  <run_depend>capabilities</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>nav_msgs</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>angles</run_depend>
-  <run_depend>diagnostic_aggregator</run_depend>
-  <run_depend>diagnostic_updater</run_depend>
-  <run_depend>diagnostic_msgs</run_depend>
-  <run_depend>nodelet</run_depend>
-  <run_depend>pluginlib</run_depend>
+  <depend>angles</depend>
+  <depend>diagnostic_msgs</depend>
+  <depend>diagnostic_updater</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
 
   <!-- Kobuki -->
-  <run_depend>kobuki_rapps</run_depend>
-  <run_depend>kobuki_msgs</run_depend>
-  <run_depend>kobuki_driver</run_depend>
-  <run_depend>kobuki_ftdi</run_depend>
-  <run_depend>kobuki_keyop</run_depend>
-  <run_depend>kobuki_safety_controller</run_depend>
+  <depend>kobuki_driver</depend>
+  <depend>kobuki_ros_interfaces</depend>
 
   <!-- ECL -->
-  <run_depend>ecl_exceptions</run_depend>
-  <run_depend>ecl_sigslots</run_depend>
-  <run_depend>ecl_streams</run_depend>
-  <run_depend>ecl_threads</run_depend>
+  <depend>ecl_devices</depend>
+  <depend>ecl_errors</depend>
+  <depend>ecl_exceptions</depend>
+  <depend>ecl_geometry</depend>
+  <depend>ecl_linear_algebra</depend>
+  <depend>ecl_mobile_robot</depend>
+  <depend>ecl_sigslots</depend>
 
-  <!-- For Tests -->
-  <run_depend>rospy</run_depend>
-  
+  <!-- ECL -->
+  <build_depend>ecl_build</build_depend>
+
+  <!-- ROS -->
+  <exec_depend>diagnostic_aggregator</exec_depend>
+
+  <!-- Kobuki -->
+  <exec_depend>kobuki_ftdi</exec_depend>
+  <exec_depend>kobuki_keyop</exec_depend>
+  <exec_depend>kobuki_safety_controller</exec_depend>
+
   <export>
-    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml" />
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
