Install the header files.
Signed-off-by: Chris Lalancette <clalancette@openrobotics.org>

--- a/kobuki_node/CMakeLists.txt
+++ b/kobuki_node/CMakeLists.txt
@@ -76,9 +76,10 @@ install(TARGETS kobuki_ros_node
   DESTINATION lib/kobuki_node
 )
 
-# install(DIRECTORY include/${PROJECT_NAME}/
-#         DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-# )
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION include/${PROJECT_NAME}
+)
+
 # install(DIRECTORY launch
 #         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 # )
