Port bumper2pc to ROS 2.
Signed-off-by: Chris Lalancette <clalancette@openrobotics.org>

--- a/kobuki_bumper2pc/CMakeLists.txt
+++ b/kobuki_bumper2pc/CMakeLists.txt
@@ -1,28 +1,51 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
+
 project(kobuki_bumper2pc)
-find_package(catkin REQUIRED COMPONENTS roscpp nodelet pluginlib sensor_msgs kobuki_msgs)
 
-catkin_package(
-   INCLUDE_DIRS include
-   LIBRARIES kobuki_bumper2pc_nodelet
-   CATKIN_DEPENDS roscpp nodelet pluginlib sensor_msgs kobuki_msgs
+# Default to C++14
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
+
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
+find_package(ament_cmake_ros REQUIRED)
+find_package(kobuki_ros_interfaces REQUIRED)
+find_package(rcl_interfaces REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(sensor_msgs REQUIRED)
+
+add_library(kobuki_bumper2pc src/kobuki_bumper2pc.cpp)
+target_include_directories(kobuki_bumper2pc PUBLIC
+  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+  "$<INSTALL_INTERFACE:include>"
+)
+ament_target_dependencies(kobuki_bumper2pc
+  "kobuki_ros_interfaces"
+  "rcl_interfaces"
+  "rclcpp"
+  "rclcpp_components"
+  "sensor_msgs"
 )
 
-include_directories(include ${catkin_INCLUDE_DIRS})
+rclcpp_components_register_nodes(kobuki_bumper2pc
+  "kobuki_bumper2pc::Bumper2PcNode")
 
-add_library(kobuki_bumper2pc_nodelet src/kobuki_bumper2pc.cpp)
-add_dependencies(kobuki_bumper2pc_nodelet ${catkin_EXPORTED_TARGETS})
-target_link_libraries(kobuki_bumper2pc_nodelet ${catkin_LIBRARIES})
-
-install(TARGETS kobuki_bumper2pc_nodelet
-        DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+install(TARGETS kobuki_bumper2pc
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
 )
+
 install(DIRECTORY include/${PROJECT_NAME}/
-        DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  DESTINATION include/${PROJECT_NAME}
 )
-install(DIRECTORY plugins
-        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
+
 install(DIRECTORY launch
-        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  DESTINATION share/${PROJECT_NAME}
 )
+
+ament_package()
