--- a/kobuki_bumper2pc/package.xml
+++ b/kobuki_bumper2pc/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="2">
   <name>kobuki_bumper2pc</name>
   <version>0.7.6</version>
   <description>
@@ -13,21 +13,16 @@
   <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
   <url type="website">http://ros.org/wiki/kobuki_bumper2pc</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
-  <build_depend>roscpp</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>pluginlib</build_depend>
-  <build_depend>kobuki_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
+  <depend>rcl_interfaces</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>sensor_msgs</depend>
 
-  <run_depend>roscpp</run_depend>
-  <run_depend>nodelet</run_depend>
-  <run_depend>pluginlib</run_depend>
-  <run_depend>kobuki_msgs</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  
+  <depend>kobuki_ros_interfaces</depend>
+
   <export>
-    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
