--- a/kobuki_random_walker/package.xml
+++ b/kobuki_random_walker/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="2">
   <name>kobuki_random_walker</name>
   <version>0.7.6</version>
   <description>
@@ -11,28 +11,16 @@
   <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
   <url type="website">http://ros.org/wiki/kobuki_random_walker</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
-  <build_depend>ecl_threads</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>kobuki_msgs</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>pluginlib</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>yocs_controllers</build_depend>
+  <depend>geometry_msgs</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>std_msgs</depend>
 
-  <run_depend>ecl_threads</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>kobuki_msgs</run_depend>
-  <run_depend>nodelet</run_depend>
-  <run_depend>pluginlib</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>yocs_controllers</run_depend>
-  <run_depend>yocs_cmd_vel_mux</run_depend>
-  
+  <depend>kobuki_ros_interfaces</depend>
+
   <export>
-    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
